<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/name_home"
        android:textSize="32sp"
        android:textColor="#5a8e71"
        android:gravity="center"
        android:padding="10sp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/home_description"
        android:autoLink="all"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/stub" android:id="@+id/news"/>
   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:orientation="horizontal">
       <Button
           android:layout_width="180dp"
           android:layout_height="wrap_content"
           android:text="@string/name_summary"
           android:id="@+id/oceanie"
           android:layout_weight="1"/>
       <Button
           android:layout_width="180dp"
           android:layout_height="wrap_content"
           android:text="@string/name_register"
           android:id="@+id/register"
           android:layout_weight="1"/>
   </LinearLayout>

</LinearLayout>
